--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
           <nav class="header__menu">
             <ul>
               <li><a href="index.html" class="header__link">Головна</a></li>
-              <li><a href="" class="header__link">Всі комп'ютери</a></li>
+              <li><a href="catalog.html" class="header__link">Каталог товарів</a></li>
               <li><a href="contact.html" class="header__link">Контакти</a></li>
               <li><a href="devices.html" class="header__link">Периферія</a></li>
             </ul>
@@ -271,7 +271,7 @@
     <main>
       <div class="container">
         <ul class="breadcrumb">
-          <li><a href="">Головна</a></li>
+          <li><a href="index.html">Головна</a></li>
           <li>
             <span>&nbsp;/</span>
             <strong href="">Контакти</strong>
