--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Всі комп'ютери</title>
+    <title>Каталог товарів</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   </head>
@@ -177,9 +177,7 @@
           <nav class="header__menu">
             <ul>
               <li><a href="index.html" class="header__link">Головна</a></li>
-              <li>
-                <a href="catalog.html" class="header__link">Всі комп'ютери</a>
-              </li>
+              <li><a href="catalog.html" class="header__link">Каталог товарів</a></li>
               <li><a href="contact.html" class="header__link">Контакти</a></li>
               <li><a href="devices.html" class="header__link">Периферія</a></li>
             </ul>
@@ -273,10 +271,10 @@
     <main>
       <div class="container">
         <ul class="breadcrumb">
-          <li><a href="">Головна</a></li>
+          <li><a href="index.html">Головна</a></li>
           <li>
             <span>&nbsp;/</span>
-            <strong href="">Ігровий ПК</strong>
+            <strong href="">Каталог товарів</strong>
           </li>
         </ul>
         <div class="catalog">
