--- a/basket.html
+++ b/basket.html
@@ -7,6 +7,7 @@
     <title>Каталог товарів</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   </head>
   <body>
     <header class="header">
@@ -216,21 +217,22 @@
           <div class="t-panel-container">
             <div class="t-panel profile active">
               <!-- First tab panel content  -->
-              <form action="">
+              <form action="" id="sign-in">
                 <div class="popup-consultation__input">
-                  <input type="text" id="name" required />
-                  <label for="name">Name</label>
+                  <input type="text" name="login" required class="sign-in-form__input"/>
+                  <label for="login">Name</label>
                 </div>
                 <div class="popup-consultation__input">
-                  <input type="email" id="mail" required />
-                  <label for="mail">E-mail</label>
+                  <input type="password" name="password" required class="sign-in-form__input"/>
+                  <label for="password">Password</label>
                 </div>
                 <div class="popup-consultation__input">
                   <textarea
                     rows="4"
                     cols="20"
                     type="text"
-                    id="message"
+                    name="message"
+                    class="sign-in-form__input"
                   ></textarea>
                   <label for="message">Message</label>
                 </div>
@@ -238,25 +240,27 @@
               </form>
             </div>
             <div class="t-panel messages">
-              <form action="">
+              <form action="" id="reg-form">
                 <div class="popup-consultation__input">
-                  <input type="text" id="name" required />
-                  <label for="name">Name</label>
+                  <input type="text" name="login" required class="reg-form__input" />
+                  <label for="login">Name</label>
                 </div>
                 <div class="popup-consultation__input">
-                  <input type="email" id="mail" required />
-                  <label for="mail">E-mail</label>
+                  <input type="password" name="password" required class="reg-form__input"/>
+                  <label for="password">Password</label>
                 </div>
                 <div class="popup-consultation__input">
-                  <input type="email" id="mail" required />
-                  <label for="mail">E-mail</label>
+                  <input type="email" name="email" required class="reg-form__input"/>
+                  <label for="email">E-mail</label>
                 </div>
                 <div class="popup-consultation__input">
                   <textarea
+                    class="reg-form__input"
                     rows="4"
                     cols="20"
                     type="text"
-                    id="message"
+                    name="message"
+                    class="reg-form__input"
                   ></textarea>
                   <label for="message">Message</label>
                 </div>
@@ -279,7 +283,7 @@
         </ul>
         <div class="basket__container">
             <div class="info-form__container">
-                <form action="#" class="info-form">
+                <form action="#" class="info-form" >
                     <div class="info-form__container">
                     <h3 class="info-form__header">1. Контактні дані</h3>
                         <label class="info-form__text">Ім'я</label><br>
@@ -289,7 +293,7 @@
                         <label class="info-form__text"><span class="info-form__importaint">*</span>Телефон</label><br>
                         <input class="info-form__input" type="tel" name="tel" placeholder="+380(___)___-__-__"><br>
                         <label class="info-form__text">E-mail</label><br>
-                        <input class="cinfo-form__input" type="email" placeholder="E-mail"><br>
+                        <input class="info-form__input" type="email" placeholder="E-mail" name="email"><br>
 
                         <h3 class="info-form__header">2. Спосіб доставки</h3>
                         <label class="info-form__text">Ім'я</label><br>
@@ -342,7 +346,7 @@
                             <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Сплата на ФОП</span></li>
                             <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Безготівковий з ПДВ</span></li>
                         </ul>
-                        <a href="index.html"><input type="submit" value="Оформити замовлення"></a>
+                        <a href="index.html"><input class="applyUserData" type="submit" value="Оформити замовлення"></a>
                         </div>
                   </form>
             </div>
@@ -521,4 +525,6 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/pop-up.js"></script>
+    <script src="js/basket.js" type="module"></script>
+    <script src="js/register.js"></script>
   </body>
