--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
           <div class="header__icons">
             <button id="button-sign" class="header__sign">
-              <p>Увійти</p>
+              <p id="enter-btn">Увійти</p>
               <svg
                 width="32"
                 height="32"
@@ -485,7 +485,7 @@
             </svg>
           </div>
           <div class="home-product-slider swiper-container swiper">
-            <div class="home-product-slider__wrapper swiper-wrapper">
+            <div class="home-product-slider__wrapper swiper-wrapper id="swiper-main">
               <div class="home-product__item swiper-slide">
                 <img src="img/home-cat__img.jpg" alt="" class="home-product__img" />
                 <h4 class="home-product__name">
@@ -805,5 +805,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/pop-up.js"></script>
+    <script src="js/register.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
