--- a/catalog.html
+++ b/catalog.html
@@ -178,9 +178,8 @@
           <nav class="header__menu">
             <ul>
               <li><a href="index.html" class="header__link">Головна</a></li>
-              <li><a href="catalog.html" class="header__link">Каталог товарів</a></li>
               <li><a href="contact.html" class="header__link">Контакти</a></li>
-              <li><a href="devices.html" class="header__link">Периферія</a></li>
+              <li><a href="devices.html " class="header__link">Каталог</a></li>
             </ul>
           </nav>
           <div id="burger" class="burger-btn"><span></span></div>
