--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </svg>
           </div>
           <div class="home-product-slider swiper-container swiper">
-            <div class="home-product-slider__wrapper swiper-wrapper id="swiper-main">
+            <div class="home-product-slider__wrapper swiper-wrapper" id="swiper-main">
               <div class="home-product__item swiper-slide">
                 <img src="img/home-cat__img.jpg" alt="" class="home-product__img" />
                 <h4 class="home-product__name">
@@ -531,7 +531,7 @@
                 </div>
                 <div class="home-product__buttons">
                   <a class="home-product__button button">Детальніше</a>
-                  <button class="button">Придбати</button>
+                  <button class="button purchase" id="1">Придбати</button>
                 </div>
               </div>
               <div class="home-product__item swiper-slide">
