--- a/basket.html
+++ b/basket.html
@@ -351,7 +351,7 @@
                   </form>
             </div>
             <div class="product__container" id="cartProds">
-              <div class="product__wrapper_main">
+              <!--<div class="product__wrapper_main">
                 <ul>
                   <li class="product__wrapper">
                       <img class="product__image" src="img/home-cat__img.jpg" alt="">
@@ -391,7 +391,7 @@
                     </button>
                 </li>
               </ul>
-              </div>
+              </div>-->
             </div>
             
         </div>
