--- a/devices.html
+++ b/devices.html
@@ -132,7 +132,7 @@
           </div>
           <div class="header__icons">
             <button id="button-sign" class="header__sign">
-              <p>Увійти</p>
+              <p id="enter-btn">Увійти</p>
               <svg
                 width="32"
                 height="32"
@@ -178,7 +178,6 @@
           <nav class="header__menu">
             <ul>
               <li><a href="index.html" class="header__link">Головна</a></li>
-              <li><a href="catalog.html" class="header__link">Каталог товарів</a></li>
               <li><a href="contact.html" class="header__link">Контакти</a></li>
               <li><a href="devices.html" class="header__link">Периферія</a></li>
             </ul>
@@ -487,5 +486,6 @@
     <script src="js/script.js"></script>
     <script src="js/pop-up.js"></script>
     <script src="js/register.js"></script>
+    <script src="js/periphery.js"></script>
   </body>
 </html>
