--- a/basket.html
+++ b/basket.html
@@ -178,7 +178,6 @@
           <nav class="header__menu">
             <ul>
               <li><a href="index.html" class="header__link">Головна</a></li>
-              <li><a href="catalog.html" class="header__link">Каталог товарів</a></li>
               <li><a href="contact.html" class="header__link">Контакти</a></li>
               <li><a href="devices.html" class="header__link">Периферія</a></li>
             </ul>
@@ -346,7 +345,7 @@
                             <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Сплата на ФОП</span></li>
                             <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Безготівковий з ПДВ</span></li>
                         </ul>
-                        <a href="index.html"><input class="applyUserData" type="submit" value="Оформити замовлення"></a>
+                        <a href="index.html"><input class="applyUserData button" type="submit" value="Оформити замовлення"></a>
                         </div>
                   </form>
             </div>
