--- a/devices.html
+++ b/devices.html
@@ -167,7 +167,7 @@
                   fill="#777E90"
                 ></path>
               </svg>
-              <p>Кошик <br />порожній</p>
+              <a href="basket.html"><p>Кошик <br />порожній</p></a>
               <div class="basket__dropdown">У кошику порожньо!</div>
             </button>
           </div>
