--- a/index.html
+++ b/index.html
@@ -225,16 +225,6 @@
                   <input type="password" name="password" required class="sign-in-form__input"/>
                   <label for="password">Password</label>
                 </div>
-                <div class="popup-consultation__input">
-                  <textarea
-                    rows="4"
-                    cols="20"
-                    type="text"
-                    name="message"
-                    class="sign-in-form__input"
-                  ></textarea>
-                  <label for="message">Message</label>
-                </div>
                 <input type="submit" class="button" />
               </form>
             </div>
@@ -251,17 +241,6 @@
                 <div class="popup-consultation__input">
                   <input type="email" name="email" required class="reg-form__input"/>
                   <label for="email">E-mail</label>
-                </div>
-                <div class="popup-consultation__input">
-                  <textarea
-                    class="reg-form__input"
-                    rows="4"
-                    cols="20"
-                    type="text"
-                    name="message"
-                    class="reg-form__input"
-                  ></textarea>
-                  <label for="message">Message</label>
                 </div>
                 <input type="submit" class="button" />
               </form>
@@ -454,7 +433,7 @@
           </div>
         </div>
         <div class="home-product">
-          <h2 class="title title_margin">Ціна якість цього місяцю</h2>
+          <h2 class="title title_margin">Основні товари</h2>
           <div class="home-product__prev">
             <svg
               width="10"
