--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__top">
         <div class="header__wrapper">
-          <a href="#" class="header__logo">
+          <a href="index.html" class="header__logo">
             <svg
               width="161"
               height="48"
@@ -147,6 +147,8 @@
               </svg>
             </button>
             <a href="basket.html"><button class="header__basket">
+              <p>Кошик</p>
+
               <svg
                 width="32"
                 height="32"
@@ -167,7 +169,6 @@
                   fill="#777E90"
                 ></path>
               </svg>
-              <p>Кошик <br />порожній</p>
               <div class="basket__dropdown">У кошику порожньо!</div>
             </button></a>
           </div>
@@ -256,15 +257,17 @@
           <div class="home-cat__item">
             <div class="home-cat__description">
               <p class="home-cat__sub-title">Інтернет магазин</p>
-              <h1 class="home-cat__title">комп'ютерів</h1>
+              <h1 class="home-cat__title">електроніки</h1>
               <a href="" class="button">Детальніше</a>
             </div>
-            <img src="img/home-cat__img.jpg" class="home-cat__img" />
+            <img src="img/kompyutery-monitory--noutbuki-rabochij-s-1493576.jpg" class="home-cat__img" style="
+            width: 500px;
+            height: 250px;"/>
           </div>
           <div class="home-cat__item">
-            <img src="img/home-cat__img.jpg" class="home-cat__img" />
+            <img src="img/image_2022-12-28_11-16-19.png" class="home-cat__img" />
             <div class="home-cat__description">
-              <h1 class="home-cat__title">Ігрові пк</h1>
+              <h1 class="home-cat__title">Ігрові мікрофони</h1>
               <p class="home-cat__sub-title">
                 Ігровий сучасний продуктивний комп'ютер
               </p>
@@ -272,9 +275,9 @@
             </div>
           </div>
           <div class="home-cat__item">
-            <img src="img/home-cat__img.jpg" class="home-cat__img" />
+              <img src="img/image_2022-12-28_11-14-10.png" class="home-cat__img" />
             <div class="home-cat__description">
-              <h1 class="home-cat__title">Ігрові пк</h1>
+              <h1 class="home-cat__title">Ігрові миші</h1>
               <p class="home-cat__sub-title">
                 Ігровий сучасний продуктивний комп'ютер
               </p>
@@ -282,9 +285,9 @@
             </div>
           </div>
           <div class="home-cat__item">
-            <img src="img/home-cat__img.jpg" class="home-cat__img" />
+            <img src="img/image_2022-12-28_11-08-25.png" class="home-cat__img" />
             <div class="home-cat__description">
-              <h1 class="home-cat__title">Ігрові пк</h1>
+              <h1 class="home-cat__title">Ігрові Навушники</h1>
               <p class="home-cat__sub-title">
                 Ігровий сучасний продуктивний комп'ютер
               </p>
@@ -292,9 +295,9 @@
             </div>
           </div>
           <div class="home-cat__item">
-            <img src="img/home-cat__img.jpg" class="home-cat__img" />
+            <img src="img/image_2022-12-28_11-17-35.png" class="home-cat__img" />
             <div class="home-cat__description">
-              <h1 class="home-cat__title">Ігрові пк</h1>
+              <h1 class="home-cat__title">Ігрові комплектуючі</h1>
               <p class="home-cat__sub-title">
                 Ігровий сучасний продуктивний комп'ютер
               </p>
