--- a/basket.html
+++ b/basket.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__top">
         <div class="header__wrapper">
-          <a href="#" class="header__logo">
+          <a href="index.html" class="header__logo">
             <svg
               width="161"
               height="48"
@@ -112,9 +112,9 @@
             </svg>
           </a>
           <div class="header__search">
-            <input type="search" placeholder="Я шукаю..(Наприклад :3050)" />
+            <input type="search" placeholder="Я шукаю..(Наприклад :3050)" id="search"/>
             <span class="header__btn">
-              <button type="button" class="btn btn-lg">
+              <button type="button" class="btn btn-lg" onclick="searchProd()">
                 <svg
                   width="20"
                   height="20"
@@ -146,30 +146,32 @@
                 ></path>
               </svg>
             </button>
-            <button class="header__basket">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 32 32"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M23.9 17C24.3 17 24.6 16.8 24.8 16.4L31.9 5C32 4.7 32 4.3 31.8 4C31.6 3.7 31.3 3.5 31 3.5H14.1C13.5 3.5 13.1 3.9 13.1 4.5C13.1 5.1 13.5 5.5 14.1 5.5H29.4L23.3 15H11.4L5.1 0.6C4.9 0.2 4.6 0 4.2 0H1C0.4 0 0 0.4 0 1C0 1.6 0.4 2 1 2H3.5L9.7 16L6.8 20.6C6.6 20.9 6.7 21.3 6.8 21.6C6.9 21.9 7.3 22 7.7 22H27.8C28.4 22 28.8 21.6 28.8 21C28.8 20.4 28.4 20 27.8 20H9.3L11.4 17H23.9Z"
-                  fill="#777E90"
-                ></path>
-                <path
-                  d="M9.4001 24.5C7.3001 24.5 5.6001 26.2 5.6001 28.3C5.6001 30.4 7.3001 32 9.4001 32C11.5001 32 13.2001 30.3 13.2001 28.2C13.2001 26.1 11.4001 24.5 9.4001 24.5ZM9.4001 30C8.4001 30 7.6001 29.2 7.6001 28.2C7.6001 27.2 8.4001 26.4 9.4001 26.4C10.4001 26.4 11.2001 27.2 11.2001 28.2C11.2001 29.2 10.3001 30 9.4001 30Z"
-                  fill="#777E90"
-                ></path>
-                <path
-                  d="M25 24.5C22.9 24.5 21.2 26.2 21.2 28.3C21.2 30.4 22.9 32 25 32C27.1 32 28.7999 30.3 28.7999 28.2C28.7999 26.1 27.1 24.5 25 24.5ZM25 30C24 30 23.2 29.2 23.2 28.2C23.2 27.2 24 26.4 25 26.4C26 26.4 26.7999 27.2 26.7999 28.2C26.7999 29.2 26 30 25 30Z"
-                  fill="#777E90"
-                ></path>
-              </svg>
-              <p>Кошик <br />порожній</p>
-              <div class="basket__dropdown">У кошику порожньо!</div>
-            </button>
+            <a href="basket.html">
+              <button class="header__basket">
+                <p>Кошик</p>
+
+                <svg
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M23.9 17C24.3 17 24.6 16.8 24.8 16.4L31.9 5C32 4.7 32 4.3 31.8 4C31.6 3.7 31.3 3.5 31 3.5H14.1C13.5 3.5 13.1 3.9 13.1 4.5C13.1 5.1 13.5 5.5 14.1 5.5H29.4L23.3 15H11.4L5.1 0.6C4.9 0.2 4.6 0 4.2 0H1C0.4 0 0 0.4 0 1C0 1.6 0.4 2 1 2H3.5L9.7 16L6.8 20.6C6.6 20.9 6.7 21.3 6.8 21.6C6.9 21.9 7.3 22 7.7 22H27.8C28.4 22 28.8 21.6 28.8 21C28.8 20.4 28.4 20 27.8 20H9.3L11.4 17H23.9Z"
+                    fill="#777E90"
+                  ></path>
+                  <path
+                    d="M9.4001 24.5C7.3001 24.5 5.6001 26.2 5.6001 28.3C5.6001 30.4 7.3001 32 9.4001 32C11.5001 32 13.2001 30.3 13.2001 28.2C13.2001 26.1 11.4001 24.5 9.4001 24.5ZM9.4001 30C8.4001 30 7.6001 29.2 7.6001 28.2C7.6001 27.2 8.4001 26.4 9.4001 26.4C10.4001 26.4 11.2001 27.2 11.2001 28.2C11.2001 29.2 10.3001 30 9.4001 30Z"
+                    fill="#777E90"
+                  ></path>
+                  <path
+                    d="M25 24.5C22.9 24.5 21.2 26.2 21.2 28.3C21.2 30.4 22.9 32 25 32C27.1 32 28.7999 30.3 28.7999 28.2C28.7999 26.1 27.1 24.5 25 24.5ZM25 30C24 30 23.2 29.2 23.2 28.2C23.2 27.2 24 26.4 25 26.4C26 26.4 26.7999 27.2 26.7999 28.2C26.7999 29.2 26 30 25 30Z"
+                    fill="#777E90"
+                  ></path>
+                </svg>
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -284,27 +286,26 @@
             <div class="info-form__container">
                 <form action="#" class="info-form" >
                     <div class="info-form__container">
-                    <h3 class="info-form__header">1. Контактні дані</h3>
+                    <h3 class="info-form__header contact__title">1. Контактні дані</h3>
                         <label class="info-form__text">Ім'я</label><br>
-                        <input class="info-form__input"type="text" name="name" placeholder="Ім'я"><br>
+                        <input class="info-form__input basket"type="text" name="name" placeholder="Ім'я"><br>
                         <label class="info-form__text">Прізвище</label><br>
-                        <input class="info-form__input" type="text" name="surname" placeholder="Прізвище"><br>
+                        <input class="info-form__input basket" type="text" name="surname" placeholder="Прізвище"><br>
                         <label class="info-form__text"><span class="info-form__importaint">*</span>Телефон</label><br>
-                        <input class="info-form__input" type="tel" name="tel" placeholder="+380(___)___-__-__"><br>
+                        <input class="info-form__input basket" type="tel" name="tel" placeholder="+380(___)___-__-__"><br>
                         <label class="info-form__text">E-mail</label><br>
-                        <input class="info-form__input" type="email" placeholder="E-mail" name="email"><br>
+                        <input class="info-form__input basket" type="email" placeholder="E-mail" name="email"><br>
 
-                        <h3 class="info-form__header">2. Спосіб доставки</h3>
-                        <label class="info-form__text">Ім'я</label><br>
+                        <h3 class="info-form__header contact__title">2. Спосіб доставки</h3>
                         <ul>
-                            <li class="way-to-get"><input type="radio"  name="nova_poshta" checked><span class="way-to-get__text">Доставка новою поштою</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Самовивіз з магазину</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Доставка кур'єром по Києву</span></li>
+                            <li class="way-to-get"><input type="radio"  name="nova_poshta" checked><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/novap.svg" alt="">Доставка новою поштою</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/car.svg" alt=""> Самовивіз з магазину</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/Delivery.svg" alt=""> Доставка кур'єром по Києву</span></li>
                         </ul>
                         
                         <h3 class="info-form__header">Адреса доставки</h3>
                         <label class="info-form__text"><span class="info-form__importaint">*</span> Місто</label><br>
-                        <input name="city" list="cities">
+                        <input name="city" list="cities" class="info-form__input" placeholder="Місто">
                         <datalist id="cities" name="city">
                             <option value="Київ">
                             <option value="Харків">
@@ -331,19 +332,18 @@
                             <option value="Ужгород">
                         </datalist><br>
                         <label class="info-form__text"><span class="info-form__importaint">*</span>Відділення нової пошти</label><br>
-                        <input name="placeOfGetting" list="places">
+                        <input name="placeOfGetting" list="places" class="info-form__input" placeholder="Відділення нової пошти">
                         <datalist id="places" name="place">
                         </datalist>
 
-                        <h3 class="info-form__header">3. Спосіб оплати</h3>
+                        <h3 class="info-form__header contact__title">3. Спосіб оплати</h3>
                         <ul>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta" checked><span class="way-to-get__text">Оплата при отриманні</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Покупка частинами (МоноБанк)</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Оплата частинами (ПриватБанк)</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Миттєва розстрочка (ПриватБанк)</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Liqpay</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Сплата на ФОП</span></li>
-                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text">Безготівковий з ПДВ</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/cod.svg" alt=""> Оплата при отриманні</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/cod4.svg" alt=""> На карту</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/liqpay_icon.svg" alt=""> Безготівковий з ПДВ</span></li>
+
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/cod3.svg" alt=""> Jплата на ФОП</span></li>
+                            <li class="way-to-get"><input type="radio" name="nova_poshta"><span class="way-to-get__text"><img src="https://it-blok.com.ua/catalog/view/theme/default/image/cart_icons/cod1.svg" alt=""> Безготівковий з ПДВ</span></li>
                         </ul>
                         <a href="index.html"><input class="applyUserData button" type="submit" value="Оформити замовлення"></a>
                         </div>
@@ -528,4 +528,6 @@
     <script src="js/pop-up.js"></script>
     <script src="js/register.js"></script>
     <script src="js/basket.js" type="module"></script>
+    <script src="js/findProd.js"></script>
+
   </body>
