--- a/devices.html
+++ b/devices.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__top">
         <div class="header__wrapper">
-          <a href="#" class="header__logo">
+          <a href="index.html" class="header__logo">
             <svg
               width="161"
               height="48"
@@ -112,9 +112,9 @@
             </svg>
           </a>
           <div class="header__search">
-            <input type="search" placeholder="Я шукаю..(Наприклад :3050)" />
+            <input type="search" placeholder="Я шукаю..(Наприклад :3050)" id="search"/>
             <span class="header__btn">
-              <button type="button" class="btn btn-lg">
+              <button type="button" class="btn btn-lg" onclick="searchProd()">
                 <svg
                   width="20"
                   height="20"
@@ -146,30 +146,34 @@
                 ></path>
               </svg>
             </button>
-            <button class="header__basket">
-              <svg
-                width="32"
-                height="32"
-                viewBox="0 0 32 32"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M23.9 17C24.3 17 24.6 16.8 24.8 16.4L31.9 5C32 4.7 32 4.3 31.8 4C31.6 3.7 31.3 3.5 31 3.5H14.1C13.5 3.5 13.1 3.9 13.1 4.5C13.1 5.1 13.5 5.5 14.1 5.5H29.4L23.3 15H11.4L5.1 0.6C4.9 0.2 4.6 0 4.2 0H1C0.4 0 0 0.4 0 1C0 1.6 0.4 2 1 2H3.5L9.7 16L6.8 20.6C6.6 20.9 6.7 21.3 6.8 21.6C6.9 21.9 7.3 22 7.7 22H27.8C28.4 22 28.8 21.6 28.8 21C28.8 20.4 28.4 20 27.8 20H9.3L11.4 17H23.9Z"
-                  fill="#777E90"
-                ></path>
-                <path
-                  d="M9.4001 24.5C7.3001 24.5 5.6001 26.2 5.6001 28.3C5.6001 30.4 7.3001 32 9.4001 32C11.5001 32 13.2001 30.3 13.2001 28.2C13.2001 26.1 11.4001 24.5 9.4001 24.5ZM9.4001 30C8.4001 30 7.6001 29.2 7.6001 28.2C7.6001 27.2 8.4001 26.4 9.4001 26.4C10.4001 26.4 11.2001 27.2 11.2001 28.2C11.2001 29.2 10.3001 30 9.4001 30Z"
-                  fill="#777E90"
-                ></path>
-                <path
-                  d="M25 24.5C22.9 24.5 21.2 26.2 21.2 28.3C21.2 30.4 22.9 32 25 32C27.1 32 28.7999 30.3 28.7999 28.2C28.7999 26.1 27.1 24.5 25 24.5ZM25 30C24 30 23.2 29.2 23.2 28.2C23.2 27.2 24 26.4 25 26.4C26 26.4 26.7999 27.2 26.7999 28.2C26.7999 29.2 26 30 25 30Z"
-                  fill="#777E90"
-                ></path>
-              </svg>
-              <a href="basket.html"><p>Кошик <br />порожній</p></a>
-              <div class="basket__dropdown">У кошику порожньо!</div>
-            </button>
+            <a href="basket.html">
+              <button class="header__basket">
+                <p>Кошик</p>
+                  <svg
+                    width="32"
+                    height="32"
+                    viewBox="0 0 32 32"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M23.9 17C24.3 17 24.6 16.8 24.8 16.4L31.9 5C32 4.7 32 4.3 31.8 4C31.6 3.7 31.3 3.5 31 3.5H14.1C13.5 3.5 13.1 3.9 13.1 4.5C13.1 5.1 13.5 5.5 14.1 5.5H29.4L23.3 15H11.4L5.1 0.6C4.9 0.2 4.6 0 4.2 0H1C0.4 0 0 0.4 0 1C0 1.6 0.4 2 1 2H3.5L9.7 16L6.8 20.6C6.6 20.9 6.7 21.3 6.8 21.6C6.9 21.9 7.3 22 7.7 22H27.8C28.4 22 28.8 21.6 28.8 21C28.8 20.4 28.4 20 27.8 20H9.3L11.4 17H23.9Z"
+                      fill="#777E90"
+                    ></path>
+                    <path
+                      d="M9.4001 24.5C7.3001 24.5 5.6001 26.2 5.6001 28.3C5.6001 30.4 7.3001 32 9.4001 32C11.5001 32 13.2001 30.3 13.2001 28.2C13.2001 26.1 11.4001 24.5 9.4001 24.5ZM9.4001 30C8.4001 30 7.6001 29.2 7.6001 28.2C7.6001 27.2 8.4001 26.4 9.4001 26.4C10.4001 26.4 11.2001 27.2 11.2001 28.2C11.2001 29.2 10.3001 30 9.4001 30Z"
+                      fill="#777E90"
+                    ></path>
+                    <path
+                      d="M25 24.5C22.9 24.5 21.2 26.2 21.2 28.3C21.2 30.4 22.9 32 25 32C27.1 32 28.7999 30.3 28.7999 28.2C28.7999 26.1 27.1 24.5 25 24.5ZM25 30C24 30 23.2 29.2 23.2 28.2C23.2 27.2 24 26.4 25 26.4C26 26.4 26.7999 27.2 26.7999 28.2C26.7999 29.2 26 30 25 30Z"
+                      fill="#777E90"
+                    ></path>
+                  </svg>
+                  
+                  <div class="basket__dropdown">У кошику порожньо!</div>
+                </button>
+          </a>
+
           </div>
         </div>
       </div>
@@ -225,16 +229,6 @@
                   <input type="password" name="password" required class="sign-in-form__input"/>
                   <label for="password">Password</label>
                 </div>
-                <div class="popup-consultation__input">
-                  <textarea
-                    rows="4"
-                    cols="20"
-                    type="text"
-                    name="message"
-                    class="sign-in-form__input"
-                  ></textarea>
-                  <label for="message">Message</label>
-                </div>
                 <input type="submit" class="button" />
               </form>
             </div>
@@ -251,17 +245,6 @@
                 <div class="popup-consultation__input">
                   <input type="email" name="email" required class="reg-form__input"/>
                   <label for="email">E-mail</label>
-                </div>
-                <div class="popup-consultation__input">
-                  <textarea
-                    class="reg-form__input"
-                    rows="4"
-                    cols="20"
-                    type="text"
-                    name="message"
-                    class="reg-form__input"
-                  ></textarea>
-                  <label for="message">Message</label>
                 </div>
                 <input type="submit" class="button" />
               </form>
@@ -487,5 +470,7 @@
     <script src="js/pop-up.js"></script>
     <script src="js/register.js"></script>
     <script src="js/periphery.js"></script>
+    <script src="js/findProd.js"></script>
+
   </body>
 </html>
